force-app/main/default/objects/AFSC__FS_Alert__c/AFSC__FS_Alert__c.object-meta.xml
<CustomObject>
    <description>F-Secure Cloud Protection: File and URL scan alert</description>
    <label>Alert</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Alert Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>