force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Date_Time__c</fullName>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>