force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Details__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Details__c</fullName>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>