force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>