force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Reason__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>