force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>