force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Severity__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#CC0000</color>
                <label>Critical</label>
            </value>
            <value>
                <fullName>Important</fullName>
                <color>#F3D904</color>
                <label>Important</label>
            </value>
            <value>
                <fullName>Information</fullName>
                <color>#3366FF</color>
                <label>Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>