force-app/main/default/objects/AFSC__FS_Alert__c/fields/AFSC__Source__c.field-meta.xml
<CustomField>
    <fullName>AFSC__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Protection</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>URL Protection</fullName>
            </value>
            <value>
                <fullName>Security Cloud</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>